# ticket_analysis

./: .envrc.sample  .gitignore  Dockerfile  README.md  generate.py  generate_orgs.py  generate_tickets.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
bigquery/: create_external_tables.sh  user.schema
