[tool.poetry]
name = "ticketanalysis"
version = "0.1.0"
description = ""
authors = ["david doit <david@doit-intl.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "2.24.0"
google-cloud-core = "1.3.0"
google-cloud-storage = "1.30.0"
Flask = "1.1.2"
gunicorn = "20.0.4"
google-cloud-secret-manager = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
