[tool.pdm]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "ticketanalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "david doit", email = "david@doit-intl.com"},
]
dependencies = [
    "requests==2.24.0",
    "google-cloud-core==1.3.0",
    "google-cloud-storage==1.30.0",
    "Flask==1.1.2",
    "gunicorn==20.0.4",
    "google-cloud-secret-manager<3.0.0,>=2.2.0",
]
dev-dependencies = [
    "mypy<1.0,>=0.812",
    "black<21.0,>=20.8b1",
]
requires-python = ">=3.8,<4.0"
dynamic = ["classifiers"]
license = {text = "MIT"}
includes = []
